--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <title>Digital Design Agency | Frontend Work</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="image/favicon-16x16.png" type="image/x-icon">
 </head>
 
 <body>
-    <div id="main" class="font-[nb] min-h-screen ">
+    <div id="main" class="font-['Unbounded', sans-serif] min-h-screen ">
         <section id="header" class="w-full h-screen text-white relative">
             <video src="image/video.mp4" autoplay loop muted
                 class="w-full h-full object-center object-fill absolute"></video>
@@ -20,7 +23,7 @@
                 <h1 class="text-xl cursor-pointer font-medium">Digital Desgin Agency</h1>
                 <button class="text-xl border py-2.5 px-8 rounded-full">Menu</button>
             </div>
-            <h1 class="flex items-center relative text-[20rem] font-[rej] cursor-default left-8 max-[600px]:text-[7rem] max-[600px]:top-52 max-[1200px]:text-[12rem] max-[1200px]:top-44 max-[1200px]:left-20 max-[500px]:text-[4rem] ">
+            <h1 class="flex items-center relative text-[20rem] font-['Madimi One', sans-serif] cursor-default left-8 max-[600px]:text-[7rem] max-[600px]:top-52 max-[1200px]:text-[12rem] max-[1200px]:top-44 max-[1200px]:left-20 max-[500px]:text-[4rem] ">
                 <span>F</span>
                 <span>r</span>
                 <span>o</span>
@@ -47,7 +50,7 @@
                 </div>
                 <hr class="border bg-black h-[0.2rem] w-[80em]">
                 <div class="w-[80em]" id="mainText">
-                    <h1 class="text-[3.5rem] max-[1200px]:text-[3rem] max-[900px]:text-[2.5rem] max-[900px]:left-4 font-[nb] leading-[1.07] absolute flex flex-col cursor-default">
+                    <h1 class="text-[3.5rem] max-[1200px]:text-[3rem] max-[900px]:text-[2.5rem] max-[900px]:left-4 font-['Unbounded', sans-serif] leading-[1.07] absolute flex flex-col cursor-default">
                         <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We are a brand accelerator for
                             fast-growing</span>
                         <span>companies. Our mission is to transform founders'</span>
@@ -115,21 +118,21 @@
                             autoplay loop muted></video>
                         <img src="image/homepage1.avif"
                             class="w-full h-full object-cover absolute hover:opacity-0 transition cursor-pointer">
-                        <h1 class="absolute bottom-10 left-28 max-[400px]:left-20 z-10 text-white text-5xl font-[rej] ">RIVIAN</h1>
+                        <h1 class="absolute bottom-10 left-28 max-[400px]:left-20 z-10 text-white text-5xl font-['Madimi One', sans-serif] ">RIVIAN</h1>
                     </div>
                     <div class="card w-[32%] h-[75vh] max-[900px]:w-[50%] max-[900px]:top-10 max-[900px]:w-[80%] bg-red-200 relative rounded-md overflow-hidden">
                         <video src="image/Website-homepage-Work-02_1.mp4" class="absolute w-full h-full object-cover"
                             autoplay loop muted></video>
                         <img src="image/homepage2.jpg"
                             class="w-full h-full object-cover absolute hover:opacity-0 transition cursor-pointer">
-                        <h1 class="absolute bottom-10 left-24 max-[400px]:left-20 z-10 text-white text-5xl font-[rej] ">OURA RING</h1>
+                        <h1 class="absolute bottom-10 left-24 max-[400px]:left-20 z-10 text-white text-5xl font-['Madimi One', sans-serif] ">OURA RING</h1>
                     </div>
                     <div class="card w-[32%] h-[75vh] max-[900px]:w-[50%] max-[900px]:top-10 max-[900px]:w-[80%] bg-red-200 relative rounded-md overflow-hidden">
                         <video src="image/Website-homepage-Work-03_1.mp4" class="absolute w-full h-full object-cover"
                             autoplay loop muted></video>
                         <img src="image/homepage3.avif"
                             class="w-full h-full object-cover absolute hover:opacity-0 transition cursor-pointer">
-                        <h1 class="absolute bottom-10 left-28 max-[400px]:left-20 z-10 text-white text-5xl font-[rej] ">MOXION</h1>
+                        <h1 class="absolute bottom-10 left-28 max-[400px]:left-20 z-10 text-white text-5xl font-['Madimi One', sans-serif] ">MOXION</h1>
                     </div>
                 </div>
             </div>
@@ -152,7 +155,7 @@
                 </div>
                 <hr class="border bg-black h-[0.2rem] w-[80em]">
                 <div class="w-[80em] flex justify-center" id="mainText">
-                    <h1 class="text-[3.5rem] max-[1200px]:text-[2.5rem] max-[500px]:text-[1.5rem] max-[900px]:left-4 font-[nb] leading-[1.07] absolute flex flex-col cursor-default">
+                    <h1 class="text-[3.5rem] max-[1200px]:text-[2.5rem] max-[500px]:text-[1.5rem] max-[900px]:left-4 font-['Unbounded', sans-serif] leading-[1.07] absolute flex flex-col cursor-default">
                         <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We are a brand accelerator for
                             fast-growing</span>
                         <span>companies. Our mission is to transform founders'</span>
@@ -188,7 +191,7 @@
                 </div>
                 <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
                 <a class="flex items-center justify-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-                    <span class="self-center text-5xl font-semibold whitespace-nowrap dark:text-white font-[rej]">Digital Desgin Agency</span>
+                    <span class="self-center text-5xl font-semibold whitespace-nowrap dark:text-white font-['Madimi One', sans-serif]">Digital Desgin Agency</span>
             </a>
             </div>
         </footer>
